Update precommit, add npm distribution procedures.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <pro-app></pro-app>
+    <ngx-app></ngx-app>
   </body>
 </html>
