--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ngx-scroll-top demo</title>
+    <title>Pro Angular - Scroll Top</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <ngx-app></ngx-app>
+    <ngx-root></ngx-root>
   </body>
 </html>
